--- a/DL-HW1/tex/dry.lyx
+++ b/DL-HW1/tex/dry.lyx
@@ -6,9 +6,11 @@
 \usepackage[english]{babel}
 \usepackage[]{amsthm} %lets us use \begin{proof}
 \usepackage[]{amssymb} %gives us the character \varnothing
+\usepackage{minted}
+\usepackage{graphicx}
 
 \title{Homework 1}
-\author{Tamer Ghattas and Daniel Kuger}
+\author{Tamer Ghattas and Daniel Kerbel}
 \date\today
 %This information doesn't actually show up on your document unless you use the maketitle command below
 
@@ -62,7 +64,7 @@ Therefore the composition of affine functions are affine.
     \item The given iterative scheme stops when $f\left(x^{n+1}\right)=f\left(x^{n}\right)$ that is on $-\alpha \nabla f\left(x^{n}\right)=0$ and that occurs for $\alpha \neq 0$ only when $$\left(\frac{\partial f}{\partial x_{1}}, \ldots, \frac{\partial f}{\partial x_{n}}\right)=0$$ which means that the iterative scheme stops on a local minimum or maximum.
     
     \item let $x\in \mathcal{R}^{n}$ w.l.o.g be a local minimum, then
-    $$(*)\ f(x+dx)-f(x)>0$$
+    $$(*)\ f(x+dx)-f(x) \geq 0$$
     and
     $$\nabla f(x) = 0$$
     Using the second-order multivariate Taylor theorem, we know that
@@ -70,18 +72,50 @@ Therefore the composition of affine functions are affine.
      Corollary, we have:
     $$f(x+d x)=f(x)+0 \cdot d x+d x^{T} \cdot H(x) \cdot d x+O\left(\|d x\|^{3}\right)=$$
     $$f(x+d x)-f(x)=d x^{T} \cdot H(x) \cdot d x+O\left(\|d x\|^{3}\right)=$$
-    by (*) we get then:
-    $$0<d x^{T} \cdot H(x) \cdot d x+O\left(\|d x\|^{3}\right)$$
-    We conclude that if x is a local minimum then the Hessian matrix is positive definite.
-    Note that for local maximum the transitions are symmetric and leads to the Hessian being negative definite.
+    by (*) we get:
+    $$0\leq d x^{T} \cdot H(x) \cdot d x+O\left(\|d x\|^{3}\right)$$
+    We conclude that if the Hessian matrix $H(x)$ is positive semi-definite then x is a local minimum.
+    Note that for local maximum the transitions are symmetric and leads to the Hessian being negative definite as a sufficient condition.
 \end{enumerate}
 
 
 
 \subsection*{Problem 3}
-blaah
+
+\begin{minted}{python}
+class CircularError(Loss):
+
+  def call(self, y_true, y_pred):
+    y_pred = tf.convert_to_tensor_v2(y_pred)
+    return tf.reduce_mean(1-cos(y_pred - y_true), axis=-1)
+\end{minted}
+
+\clearpage
 \subsection*{Problem 4}
-Blah
+
+need to proof that $f(x)=\Sigma_{i} \alpha_{i}\cdot ReLU(w_{i}x+b_{i})$ is dense in [0,1].
+Denote $\sigma(x)$ the known Sigmoid function. We observe that for scalar $\alpha$
+$$\alpha_{i} ReLU(w_{i}x+b_{i})=\left\{\begin{array}{ll}
+0 & \text { if }\ w_{i}x+b_{i}<0 \\
+\alpha_{i}(w_{i}x+b_{i}) & \text { if }\ w_{i}x+b_{i} \in[0,1] \\
+\end{array}\right.$$
+Define $M_{i}$ as the maximum of $|\alpha_{i}(w_{i}x+b_{i})|$ for $x \in [0,1] $, that is, 
+$$ R_{i}(x) =_{define}  \alpha_{i} ReLU(w_{i}x+b_{i}) $$
+where,
+$$|R_{i}(x)|  \leq M_{i}$$
+and for the sum over i:
+$$|\Sigma_{i} R_{i}(x)|\leq_{triangle\ in-eq}  \Sigma_{i} |R_{i}(x)|  \leq \Sigma_{i}M_{i}=_{define} M$$
+thus,
+$$R(x) =_{define} \Sigma_{i} \alpha_{i} ReLU(w_{i}x+b_{i}) \in [-M,M] $$
+we know from Hornik 91 theorem that any bounded function *NEEDS CHANGE*
+
 \subsection*{Problem 5}
-blah
+Assuming the activation function is ReLU, then to deal with negative coefficients one can simple add a layer to add over $ReLU(h)+ReLU(-h)$, note that one of them will nullify while the other propagate:
+
+\begin{figure}[h!]
+  \caption{Original nodes are gray colored while added ones colored in white.}
+  \centering
+  \includegraphics[width=1\textwidth]{HW1-ex5--trans}
+\end{figure}
+
 \end{document}
